--- a/completed-artworks.html
+++ b/completed-artworks.html
@@ -21,6 +21,7 @@
       src="https://kit.fontawesome.com/acb9a84b32.js"
       crossorigin="anonymous"
     ></script>
+    <script defer src="./dist/scripts/main.js"></script>
   </head>
 
   <body>
@@ -59,12 +60,49 @@
                 ></a>
               </li>
             </ul>
-            <div class="md:hidden">
+            <div id="hamburg-icon" class="md:hidden">
               <i
               class="fa-solid fa-bars hover:cursor-pointer text-2xl"
             ></i>
             </div>
           </div>
+        </nav>
+        <nav id="mobile-navbar" class="hidden md:hidden fixed top-0 left-0 right-0 bottom-0 bg-black text-white z-20">
+          <div class="flex justify-between items-center ps-12 pe-8 py-4">
+            <a href="./"
+            ><img
+              src="./dist/images/site-logo.png"
+              alt="Elixer Studios Logo"
+              class="w-36 hover:scale-105"
+            /></a>
+            <i id="close-btn" class="fa-solid fa-xmark text-3xl cursor-pointer"></i>
+          </div>
+          <ul class="font-bold flex flex-col justify-center p-4">
+            <li class="my-2">
+              <a
+                href="./"
+                class="block border-2 border-transparent hover:border-yellow-500 px-4 py-2 rounded-lg"
+                ><i class="fa-solid fa-house"></i> Home</a
+              >
+            </li>
+            <li class="my-2">
+              <a
+                href="completed-artworks.html"
+                class="block border-2 border-white bg-white text-black px-4 py-2 rounded-lg"
+                ><i class="fa-solid fa-image"></i> Completed Artworks</a
+              >
+            </li>
+            <li class="my-2">
+              <a
+                href="contact-me.html"
+                class="block border-2 border-transparent hover:border-yellow-500 px-4 py-2 rounded-lg"
+                ><i class="fa-solid fa-phone-flip"></i> Contact Me</i
+              ></a>
+            </li>
+          </ul>
+          <footer class="border-y-2 border-white bg-red mt-4 py-8">
+            <p class="text-center text-zinc-100 text-xs">Copyright &copy; All Rights Reserved Elixer Prince</p>
+          </footer>
         </nav>
         <h1 class="contact-title text-center w-fit text-5xl font-bold border-4 mx-auto border-white mb-4 rounded-md py-2 px-4 md:py-4 md:px-8">
           Completed Artworks
