--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       src="https://kit.fontawesome.com/acb9a84b32.js"
       crossorigin="anonymous"
     ></script>
+    <script defer src="./dist/scripts/main.js"></script>
   </head>
 
   <body>
@@ -59,7 +60,7 @@
                 ></a>
               </li>
             </ul>
-            <div class="md:hidden">
+            <div class="md:hidden" id="hamburg-icon">
               <i
               class="fa-solid fa-bars hover:cursor-pointer text-2xl"
             ></i>
@@ -94,9 +95,46 @@
             ></a>
           </div>
         </div>
+        <nav id="mobile-navbar" class="hidden md:hidden fixed top-0 left-0 right-0 bottom-0 bg-black text-white z-20">
+          <div class="flex justify-between items-center ps-12 pe-8 py-4">
+            <a href="#"
+            ><img
+              src="./dist/images/site-logo.png"
+              alt="Elixer Studios Logo"
+              class="w-36 hover:scale-105"
+            /></a>
+            <i id="close-btn" class="fa-solid fa-xmark text-3xl cursor-pointer"></i>
+          </div>
+          <ul class="font-bold flex flex-col justify-center p-4">
+            <li class="my-2">
+              <a
+                href="#"
+                class="block border-2 border-white bg-white text-black px-4 py-2 rounded-lg"
+                ><i class="fa-solid fa-house"></i> Home</a
+              >
+            </li>
+            <li class="my-2">
+              <a
+                href="completed-artworks.html"
+                class="block border-2 border-transparent hover:border-yellow-500 px-4 py-2 rounded-lg"
+                ><i class="fa-solid fa-image"></i> Completed Artworks</a
+              >
+            </li>
+            <li class="my-2">
+              <a
+                href="contact-me.html"
+                class="block border-2 border-transparent hover:border-yellow-500 px-4 py-2 rounded-lg"
+                ><i class="fa-solid fa-phone-flip"></i> Contact Me</i
+              ></a>
+            </li>
+          </ul>
+          <footer class="border-y-2 border-white bg-red mt-4 py-8">
+            <p class="text-center text-zinc-100 text-xs">Copyright &copy; All Rights Reserved Elixer Prince</p>
+          </footer>
+        </nav>
       </header>
       <main>
-        <section id="about-me-section" class="p-8 lg:py-12 bg-zinc-950 text-white" aria-labelledby="about-me-heading">
+        <section id="about-me-section" class="px-4 py-8 lg:py-12 bg-zinc-950 text-white" aria-labelledby="about-me-heading">
           <header>
             <h2 id="about-me-heading" class="text-center font-bold text-4xl mb-4">About Me</h2>
           </header>
@@ -111,10 +149,10 @@
             <h2 id="offers-heading" class="text-center font-bold text-4xl mb-4 border-b-4 border-zinc-200 pb-4">What I Offer</h2>
           </header>
           <ol class="font-bold md:text-lg">
-            <li class="hover:bg-black hover:text-white mb-2 md:ms-2 hover:scale-105 hover:mx-8 rounded-l-2xl rounded-r-md p-2 ps-4"><a href="completed-artworks.html#anime-cartoon-section" class="block">1. Anime/Cartoon Illustrations (Done to Order)</a></li>
-            <li class="hover:bg-black hover:text-white mb-2 md:ms-2 hover:scale-105 hover:mx-8 rounded-l-2xl rounded-r-md p-2 ps-4"><a href="completed-artworks.html#semi-realistic-section"class="block">2. Semi-realistic/Stylized Illustrations (Done to Order)</a>
+            <li class="hover:bg-black hover:text-white mb-2 md:ms-2 hover:scale-105 hover:mx-4 rounded-l-2xl rounded-r-md p-2 ps-4"><a href="completed-artworks.html#anime-cartoon-section" class="block">1. Anime/Cartoon Illustrations (Done to Order)</a></li>
+            <li class="hover:bg-black hover:text-white mb-2 md:ms-2 hover:scale-105 hover:mx-4 rounded-l-2xl rounded-r-md p-2 ps-4"><a href="completed-artworks.html#semi-realistic-section"class="block">2. Semi-realistic/Stylized Illustrations (Done to Order)</a>
             </li>
-            <li class="hover:bg-black hover:text-white md:ms-2  hover:scale-105 hover:mx-8 rounded-l-2xl rounded-r-md p-2 ps-4"><a href="completed-artworks.html#portrait-requests-section" class="block">3. Custom Portraits (Done to Order)</a></li>
+            <li class="hover:bg-black hover:text-white md:ms-2  hover:scale-105 hover:mx-4 rounded-l-2xl rounded-r-md p-2 ps-4"><a href="completed-artworks.html#portrait-requests-section" class="block">3. Custom Portraits (Done to Order)</a></li>
           </ol>
         </section>
         <section id="testimonials--section" class="p-8" aria-labelledby="testimonials-heading">
