Fix mobile responsiveness issues

--- a/completed-artworks.html
+++ b/completed-artworks.html
@@ -26,7 +26,7 @@
 
   <body>
     <div class="flex flex-col bg-purple-300">
-      <header class="subheader artworks-header px-4 pt-20 text-white h-full flex flex-col justify-center content-center">
+      <header class="subheader artworks-header px-4 pt-20 text-white flex flex-col justify-center content-center">
         <nav
           class="flex z-10 justify-between ps-12 pe-8 py-4 fixed left-0 right-0 top-0 bg-black"
         >
