--- a/contact-me.html
+++ b/contact-me.html
@@ -26,7 +26,7 @@
 
   <body>
     <div class="contact-background h-dvh flex flex-col">
-      <header class="pt-20 text-white h-full flex flex-col justify-center content-center">
+      <header class="pt-20 text-white h-full flex flex-col justify-center content-center min-h-fit">
         <nav
           class="flex z-10 justify-between ps-12 pe-8 py-4 fixed left-0 right-0 top-0 bg-black"
         >
@@ -128,9 +128,6 @@
           /></a>
         </article>
       </header>
-      <main>
-  
-      </main>
       <footer class="p-4 bg-zinc-900 rounded-t-xl">
         <p class="text-center font-bold text-zinc-100 text-xs md:text-md">Copyright &copy; All Rights Reserved Elixer Prince</p>
       </footer>
