--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <body>
     <div class="flex flex-col bg-purple-200 min-w-fit">
-      <header class="main-header home-header flex text-white pt-16 pb-8 px-12 min-h-screen">
+      <header class="main-header home-header flex text-white pt-16 pb-8 px-12 min-h-screen min-w-full">
         <nav
           class="flex z-10 justify-between ps-12 pe-8 py-4 fixed left-0 right-0 top-0 bg-black"
         >
