--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       src="https://kit.fontawesome.com/acb9a84b32.js"
       crossorigin="anonymous"
     ></script>
-    <script defer src="./dist/scripts/main.js"></script>
+    <script src="./dist/scripts/main.js"></script>
   </head>
 
   <body>
