--- a/contact-me.html
+++ b/contact-me.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-JM">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="author" content="Daniel Leith" />
-    <meta
-      name="description"
-      content="Contact me on one of these sites."
-    />
+    <meta name="description" content="Contact me on one of these sites." />
     <title>Contact Me</title>
     <link
       rel="icon"
@@ -25,10 +22,12 @@
   </head>
 
   <body>
-    <div class="contact-background h-dvh flex flex-col">
-      <header class="pt-20 text-white h-full flex flex-col justify-center content-center min-h-fit">
+    <div class="contact-background flex h-dvh flex-col">
+      <header
+        class="flex h-full min-h-fit flex-col content-center justify-center pt-20 text-white"
+      >
         <nav
-          class="flex z-10 justify-between ps-12 pe-8 py-4 fixed left-0 right-0 top-0 bg-black"
+          class="fixed left-0 right-0 top-0 z-10 flex justify-between bg-black py-4 pe-8 ps-12"
         >
           <a href="./"
             ><img
@@ -41,95 +40,111 @@
               <li class="border-r-2 border-white">
                 <a
                   href="./"
-                  class="border-2 border-transparent hover:border-yellow-500 px-4 py-2 rounded-lg"
+                  class="rounded-lg border-2 border-transparent px-4 py-2 hover:border-yellow-500"
                   ><i class="fa-solid fa-house"></i> Home</a
                 >
               </li>
               <li>
                 <a
                   href="completed-artworks.html"
-                  class="border-2 border-transparent hover:border-yellow-500 px-4 py-2 rounded-lg"
+                  class="rounded-lg border-2 border-transparent px-4 py-2 hover:border-yellow-500"
                   ><i class="fa-solid fa-image"></i> Completed Artworks</a
                 >
               </li>
               <li>
                 <a
                   href="#"
-                  class="border-2 border-white bg-white text-black px-4 py-2 ms-2 rounded-lg"
+                  class="ms-2 rounded-lg border-2 border-white bg-white px-4 py-2 text-black"
                   >Contact Me <i class="fa-solid fa-phone-flip"></i
                 ></a>
               </li>
             </ul>
             <div id="hamburg-icon" class="md:hidden">
-              <i
-              class="fa-solid fa-bars hover:cursor-pointer text-2xl"
-            ></i>
+              <i class="fa-solid fa-bars text-2xl hover:cursor-pointer"></i>
             </div>
           </div>
         </nav>
-        <nav id="mobile-navbar" class="hidden md:hidden fixed top-0 left-0 right-0 bottom-0 bg-black text-white z-20">
-          <div class="flex justify-between items-center ps-12 pe-8 py-4">
+        <nav
+          id="mobile-navbar"
+          class="fixed bottom-0 left-0 right-0 top-0 z-20 hidden bg-black text-white md:hidden"
+        >
+          <div class="flex items-center justify-between py-4 pe-8 ps-12">
             <a href="./"
-            ><img
-              src="./dist/images/site-logo.png"
-              alt="Elixer Studios Logo"
-              class="w-36 hover:scale-105"
+              ><img
+                src="./dist/images/site-logo.png"
+                alt="Elixer Studios Logo"
+                class="w-36 hover:scale-105"
             /></a>
-            <i id="close-btn" class="fa-solid fa-xmark text-3xl cursor-pointer"></i>
+            <i
+              id="close-btn"
+              class="fa-solid fa-xmark cursor-pointer text-3xl"
+            ></i>
           </div>
-          <ul class="font-bold flex flex-col justify-center p-4">
+          <ul class="flex flex-col justify-center p-4 font-bold">
             <li class="my-2">
               <a
                 href="./"
-                class="block border-2 border-transparent hover:border-yellow-500 px-4 py-2 rounded-lg"
+                class="block rounded-lg border-2 border-transparent px-4 py-2 hover:border-yellow-500"
                 ><i class="fa-solid fa-house"></i> Home</a
               >
             </li>
             <li class="my-2">
               <a
                 href="completed-artworks.html"
-                class="block border-2 border-transparent hover:border-yellow-500 px-4 py-2 rounded-lg"
+                class="block rounded-lg border-2 border-transparent px-4 py-2 hover:border-yellow-500"
                 ><i class="fa-solid fa-image"></i> Completed Artworks</a
               >
             </li>
             <li class="my-2">
               <a
                 href="#"
-                class="block border-2 border-white bg-white text-black px-4 py-2 rounded-lg"
-                ><i class="fa-solid fa-phone-flip"></i> Contact Me</i
-              ></a>
+                class="block rounded-lg border-2 border-white bg-white px-4 py-2 text-black"
+                ><i class="fa-solid fa-phone-flip"></i> Contact Me</a
+              >
             </li>
           </ul>
-          <footer class="border-y-2 border-white bg-red mt-4 py-8">
-            <p class="text-center text-zinc-100 text-xs">Copyright &copy; All Rights Reserved Elixer Prince</p>
-          </footer>
+          <div class="bg-red mt-4 border-y-2 border-white py-8">
+            <p class="text-center text-xs text-zinc-100">
+              Copyright &copy; All Rights Reserved Elixer Prince
+            </p>
+          </div>
         </nav>
-        <h1 class="contact-title text-center w-fit text-5xl font-bold border-4 mx-auto border-white mb-4 rounded-md py-2 px-4 md:py-4 md:px-8">
+        <h1
+          class="contact-title mx-auto mb-4 w-fit rounded-md border-4 border-white px-4 py-2 text-center text-5xl font-bold md:px-8 md:py-4"
+        >
           Contact Me
         </h1>
-        <article class="flex justify-center">
+        <div class="flex justify-center">
           <a href="https://www.instagram.com/elixerprince_art/" target="_blank"
             ><img
               src="dist/images/instagram-logo.png"
               alt="Instagram Logo"
-              title="Instagram" class="w-12 aspect-square"
+              title="Instagram"
+              class="aspect-square w-12"
           /></a>
-          <a href="https://www.youtube.com/@elixerprince_art" target="_blank" class="mx-4"
+          <a
+            href="https://www.youtube.com/@elixerprince_art"
+            target="_blank"
+            class="mx-4"
             ><img
               src="dist/images/youtube-logo.png"
               alt="YouTube Logo"
-              title="YouTube" class="w-12 aspect-square"
+              title="YouTube"
+              class="aspect-square w-12"
           /></a>
           <a href="https://www.tiktok.com/@elixerprince_art" target="_blank"
             ><img
-              src="dist/images/tiktok-logo.png" class="w-12 aspect-square"
+              src="dist/images/tiktok-logo.png"
+              class="aspect-square w-12"
               alt="TikTok Logo"
               title="TikTok"
           /></a>
-        </article>
+        </div>
       </header>
-      <footer class="p-4 bg-zinc-900 rounded-t-xl">
-        <p class="text-center font-bold text-zinc-100 text-xs md:text-md">Copyright &copy; All Rights Reserved Elixer Prince</p>
+      <footer class="rounded-t-xl bg-zinc-900 p-4">
+        <p class="md:text-md text-center text-xs font-bold text-zinc-100">
+          Copyright &copy; All Rights Reserved Elixer Prince
+        </p>
       </footer>
     </div>
   </body>
