--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="./dist/scripts/main.js"></script>
   </head>
 
-  <body>
+  <body class="min-w-fit">
     <div class="flex min-w-fit flex-col bg-purple-200">
       <header
         class="main-header home-header flex min-h-screen min-w-full px-12 pb-8 pt-16 text-white"
@@ -72,7 +72,7 @@
             Are you looking for custom illustrations?
           </p>
           <div
-            class="m-auto my-4 flex aspect-square max-h-80 min-w-80 rounded-full border-4 border-white hover:scale-105 lg:mt-8 xl:me-4"
+            class="mx-auto my-4 flex aspect-square max-h-80 min-w-80 rounded-full border-4 border-white hover:scale-105 lg:mt-8 xl:me-4"
           >
             <img
               src="./dist/images/wlop-eye-study.jpg"
