Fix initial zoom-in on homepage

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-JM">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="author" content="Daniel Leith" />
     <meta
@@ -24,10 +24,10 @@
     <script src="./dist/scripts/main.js"></script>
   </head>
 
-  <body class="min-w-fit">
-    <div class="flex min-w-fit flex-col bg-purple-200">
+  <body>
+    <div id="page-container" class="flex min-w-fit flex-col bg-purple-200">
       <header
-        class="main-header home-header flex min-h-screen min-w-full px-12 pb-8 pt-16 text-white"
+        class="main-header home-header flex min-h-screen px-12 pb-8 pt-16 text-white"
       >
         <nav
           class="fixed left-0 right-0 top-0 z-10 flex justify-between bg-black py-4 pe-8 ps-12"
