Fix scroll position so it scrolls to top of section rather than the text

--- a/completed-artworks.html
+++ b/completed-artworks.html
@@ -120,13 +120,13 @@
       </header>
       <main>
         <section
-          id="about-me-section"
+          id="table-of-contents-section"
           class="bg-zinc-950 p-8 text-white lg:py-12"
           aria-labelledby="about-me-heading"
         >
           <header>
             <h2
-              id="about-me-heading"
+              id="table-of-contents-heading"
               class="mb-4 text-center text-4xl font-bold"
             >
               Table of Contents
@@ -164,6 +164,7 @@
         <section
           id="anime-cartoon-section"
           aria-labelledby="anime-cartoon-header"
+          class="scroll-mt-24"
         >
           <header class="section-header">
             <h2
@@ -308,6 +309,7 @@
         <section
           id="semi-realistic-section"
           aria-labelledby="semi-realistic-header"
+          class="scroll-mt-24"
         >
           <header class="section-header">
             <h2
@@ -405,6 +407,7 @@
         <section
           id="portrait-requests-section"
           aria-labelledby="portrait-requests-header"
+          class="scroll-mt-24"
         >
           <header class="section-header">
             <h2
@@ -422,7 +425,11 @@
             </h2>
           </article>
         </section>
-        <section id="still-life-section" aria-labelledby="still-life-header">
+        <section
+          id="still-life-section"
+          aria-labelledby="still-life-header"
+          class="scroll-mt-24"
+        >
           <header class="section-header">
             <h2
               id="still-life-header"
