--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <main>
         <section
           id="about-me-section"
-          class="bg-zinc-950 px-4 py-8 text-white lg:py-12"
+          class="scroll-mt-16 bg-zinc-950 px-4 py-8 text-white lg:py-12"
           aria-labelledby="about-me-heading"
         >
           <header>
