Implement dark mode

--- a/completed-artworks.html
+++ b/completed-artworks.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <div class="flex flex-col bg-purple-300">
+    <div class="flex flex-col bg-purple-300 dark:bg-zinc-900">
       <header
         class="subheader artworks-header flex flex-col content-center justify-center px-4 pt-20 text-white"
       >
@@ -169,7 +169,7 @@
           <header class="section-header">
             <h2
               id="anime-cartoon-header"
-              class="my-8 text-center text-4xl font-bold"
+              class="my-8 text-center text-4xl font-bold dark:text-white"
             >
               Anime/Cartoon Illustrations
             </h2>
@@ -314,7 +314,7 @@
           <header class="section-header">
             <h2
               id="semi-realistic-header"
-              class="my-8 text-center text-4xl font-bold"
+              class="my-8 text-center text-4xl font-bold dark:text-white"
             >
               Semi-realistic/Stylized Illustrations
             </h2>
@@ -412,7 +412,7 @@
           <header class="section-header">
             <h2
               id="portrait-requests-header"
-              class="my-8 text-center text-4xl font-bold"
+              class="my-8 text-center text-4xl font-bold dark:text-white"
             >
               Portrait Requests
             </h2>
@@ -420,7 +420,7 @@
           <article
             class="m-4 grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3"
           >
-            <h2 class="text-center font-bold text-zinc-800">
+            <h2 class="text-center font-bold text-zinc-800 dark:text-white">
               No Portraits to show as yet. . .
             </h2>
           </article>
@@ -433,7 +433,7 @@
           <header class="section-header">
             <h2
               id="still-life-header"
-              class="my-8 text-center text-4xl font-bold"
+              class="my-8 text-center text-4xl font-bold dark:text-white"
             >
               Still-Life Drawings
             </h2>
@@ -463,7 +463,7 @@
           </article>
         </section>
       </main>
-      <footer class="rounded-t-xl bg-zinc-900 p-4">
+      <footer class="rounded-t-xl bg-zinc-900 p-4 dark:bg-zinc-950">
         <p class="md:text-md text-center text-xs font-bold text-zinc-100">
           Copyright &copy; All Rights Reserved Elixer Prince
         </p>
