--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
   </head>
 
   <body>
-    <div id="page-container" class="flex min-w-fit flex-col bg-purple-200">
+    <div
+      id="page-container"
+      class="flex min-w-fit flex-col bg-purple-200 dark:bg-zinc-900"
+    >
       <header
         class="main-header home-header flex min-h-screen px-12 pb-8 pt-16 text-white"
       >
@@ -208,7 +211,7 @@
         </section>
         <section
           id="testimonials--section"
-          class="p-8"
+          class="p-8 dark:text-white"
           aria-labelledby="testimonials-heading"
         >
           <header>
@@ -222,7 +225,7 @@
           <p class="text-center text-lg">No testimonials as yet. . .</p>
         </section>
       </main>
-      <footer class="rounded-t-xl bg-zinc-900 p-4">
+      <footer class="rounded-t-xl bg-zinc-900 p-4 dark:bg-zinc-950">
         <p class="md:text-md text-center text-xs font-bold text-zinc-100">
           Copyright &copy; All Rights Reserved Elixer Prince
         </p>
